# uniclip-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.githooks/: pre-commit  update-flake.sh
src/: clipboard.rs  error.rs  main.rs  options.rs  proto.rs  timestamp.rs
