[package]
name = "uniclip-rs"
version = "0.1.0"
edition = "2024"
authors = ["Sayuri Nekomiya <bbh@awsl.rip>"]
license = "MIT"
readme = "README.md"
description = "A fork of github:quackduck/uniclip in rust."

[dependencies]
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
clap = { version = "4.5.54", features = ["derive"] }
image = "0.25.9"
log = "0.4.29"
pretty_env_logger = "0.5.0"
rand = { version = "0.9.2", features = [ "small_rng" ] }
tokio = { version = "1.48.0", features = [ "full" ] }
tokio-util = { version = "0.7.17", features = [ "rt" ] }
zerocopy = "0.8.31"
zerocopy-derive = "0.8.31"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

enum_glob_use = "deny"
unwrap_used = "deny"
